# report-genius

./: .env  .env.example  .env_cache.json  .gitignore  AppGroupInfo.xml  AppInfo.xml  README.md  agentic_template_analyzer.py  agents_superagent.py  anthropic_model_adapter.py  contract_data.json  data_store.ipynb  docx_token_injector.py  kahua.har  langgraph_agent.py  legacy_agents.ipynb  llm_injection_analyzer.py  main.py  notes.txt  playground.ipynb  postman.json  postman2.json  pv_md_renderer.py  pv_template_analyzer.py  pv_template_generator.py  pv_template_renderer.py  pv_template_schema.py  pv_template_schema_compat.py  pv_template_tools.py  pyproject.toml  render_contract.py  report_generator.py  requirements.txt  response.xls  server.py  smoketest.ipynb  template_builder_api.py  templates.db  templates.py  test_render.py  (+8 more)
docs/: KAHUA_QUICK_REFERENCE.md  PV_TEMPLATE_CHECKLIST.md  page_2.md  page_3.md  portable_view_template.md
docx_docs/: docx_documentation.md  python-docx_exhaustive_reference.md
output_json/: injected_tvusd.docx  injected_tvusd2.docx  postman_1.json
pv_templates/: BofA-CO-INT-v43.docx  GSA_PV_Sustainability.docx  IO_PV_MPSR_P3_DCP_v061.docx  Inspection PV Portrait 0115_GSG_Update_01.docx  MeetingTemplate_CategoryTypeSort.docx  OOB Daily Report Portable View - Portrait.docx  ProjectPVWithLogoImage.docx  README.md  contract.md  punchlist.md  rfi.md
reports/: 10_Most_Recent_Contracts_20260127_092632.docx  10_Most_Recent_Contracts_20260127_092902.docx  Contract_0001_PortableView.docx  Contract_0001_Summary.docx  Contract_Summary_View.docx  Contracts_Report_-_Portable_View_Testing_20260122_134944.docx  Cost_Analysis_Report__Scotiabank_Arena_Renovation__20260123_113006.docx  MetadataRichContractView.docx  Organization-Wide_Contract_Overview_20260123_160543.docx  Organization-wide_RFI_Status_Report_20260126_152358.docx  Portfolio_Contract_Overview_Report_20260126_125348.docx  RFI_0001_Concrete_Mix_Design.docx  (+23 more)
(+143 files in other folders)
